<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConcentrationTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="TaskTime_display_value">00:00</string>
    <string name="TaskTime_label">Task Time</string>
    <string name="taskButton_text">Start Task Timer</string>
    <string name="InterruptionTime_label">Interrupt time</string>
    <string name="interruptButton_text">Start Interrupt time</string>
    <string name="InterruptionTime_display_value">00:00</string>
    
</resources>