<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="21dp"
        android:text="@string/InterruptionTime_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/taskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:onClick="tasktimer_activity"
        android:text="@string/taskButton_text" />

    <Button
        android:id="@+id/interruptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskButton"
        android:layout_below="@+id/taskButton"
        android:layout_marginTop="18dp"
        android:onClick="interrupttimer_activity"
        android:text="@string/interruptButton_text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/TaskTime_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/taskTimer_display_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/interruptionButton"
        android:text="@string/TaskTime_display_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/interruptTimer_display_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/taskButton"
        android:layout_alignLeft="@+id/taskTimer_display_value"
        android:text="@string/InterruptionTime_display_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>